src/objects/TRC_PLC_Codes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the TRC Group, Product Class, and PLC Bucket for each Product Class code</description>
    <fields>
        <fullName>PLC_Bucket__c</fullName>
        <label>PLC Bucket</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRC_Group__c</fullName>
        <label>TRC Group</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>TRC/PLC Codes</label>
</CustomObject>